--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import './compnents/toggler';
 @import './compnents/addOn';
 @import './compnents/square';
+@import './compnents/recipt';
 
 @import './layout/sidebar';
 @import './layout/mainSection';
