--- a/src/scss/compnents/_toggler.scss
+++ b/src/scss/compnents/_toggler.scss
@@ -15,6 +15,10 @@
     border-radius: 50%;
     background-color: white;
   }
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .toggler-year {
@@ -33,5 +37,9 @@
     height: 95%;
     border-radius: 50%;
     background-color: white;
+  }
+
+  &:hover {
+    cursor: pointer;
   }
 }
