--- a/src/scss/compnents/_recipt.scss
+++ b/src/scss/compnents/_recipt.scss
@@ -9,6 +9,11 @@
 
   .link {
     text-decoration: underline;
+
+    &:hover {
+      cursor: pointer;
+      color: $marine-blue;
+    }
   }
 
   &__label {
