--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,8 @@
 @import './compnents/addOn';
 @import './compnents/square';
 @import './compnents/recipt';
+@import './compnents/error';
+@import './compnents/thanks';
 
 @import './layout/sidebar';
 @import './layout/mainSection';
