--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 @import './compnents/recipt';
 @import './compnents/error';
 @import './compnents/thanks';
+@import './compnents/link';
 
 @import './layout/sidebar';
 @import './layout/mainSection';
