--- a/scss/layout/_mainSection.scss
+++ b/scss/layout/_mainSection.scss
@@ -47,14 +47,17 @@
   &__btn-div {
     // border: 2px solid green;
     position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     bottom: 0;
     width: 100%;
     // margin: 20px auto;
     // left: 50%;
     // transform: translate(-50%, 0);
     background-color: white;
-    display: flex;
-    justify-content: flex-end;
+    // display: flex;
+    // justify-content: flex-end;
     padding: 1em;
     box-shadow: 1px -1px 20px 1px rgba(0, 0, 0, 0.11);
   }
@@ -105,6 +108,9 @@
       width: 100%;
       background-color: unset;
       box-shadow: unset;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
   }
 }
